Add dataset files for actual ERC2 Challenge, including JSON answers, questions, and a README for setup instructions

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+data/erc2_set/pdf_reports/
+data/erc2_set/debug_data/
+data/erc2_set/databases/
+data/erc2_set/databases_ser_tab/
+
+data/test_set/debug_data
+data/test_set/databases
+data/test_set/databases_ser_tab
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
