--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ tqdm==4.66.5
 rank-bm25==0.2.2
 tabulate==0.9.0
 docling==2.14.0
-pyprojroot==0.3.0
 PyPDF2==3.0.1
 pandas==2.2.3
 faiss-cpu==1.9.0.post1
@@ -23,3 +22,6 @@ google-generativeai==0.8.4
 googleapis-common-protos==1.66.0
 click==8.1.7
 httpx==0.27.2
+tenacity==10.0.0
+sentence-transformers==5.0.0
+pyprojroot==0.3.0
